# rstmt

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue.md
.github/workflows/: crates.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs  macros.rs  primitives.rs  utils.rs
core/src/chords/: chord.rs  dyad.rs  mod.rs
core/src/error/: err.rs  kinds.rs  mod.rs
core/src/error/kinds/: music.rs
core/src/errors/: err.rs  mod.rs
core/src/intervals/: interval.rs  kinds.rs  mod.rs  qualities.rs
core/src/intervals/kinds/: variants.rs
core/src/intervals/types/: level.rs  mod.rs  qualities.rs
core/src/macros/: enums.rs  errors.rs  intervals.rs  notes.rs  ops.rs  pitches.rs  seal.rs
core/src/notes/: mod.rs  note.rs
core/src/notes/impls/: impl_note_ops.rs
core/src/ops/: absmod.rs  arith.rs  distance.rs  mod.rs
core/src/pitch/: class.rs  kinds.rs  mod.rs  pitch.rs  signs.rs
core/src/pitch/impls/: pitch_ops.rs
core/src/pitch/types/: pitch.rs  signs.rs
core/src/pitches/: kinds.rs  mod.rs  pitch.rs
core/src/tone/: mod.rs  pure.rs  tone.rs
core/src/tone/pure/: frequency.rs  mod.rs  tone.rs
core/src/traits/: harmonic.rs  intervals.rs  mod.rs  notable.rs  symbols.rs
core/src/types/: intervals.rs  mod.rs  octave.rs  pair.rs  qualities.rs  steps.rs
core/tests/: ops.rs  pitches.rs
neo/: Cargo.toml
neo/src/: error.rs  lib.rs  macros.rs  seal.rs  utils.rs
neo/src/impls/: impl_ops.rs  impl_triad.rs  impl_variants.rs
neo/src/space/: mod.rs  state.rs  venv.rs
neo/src/tonnetz/: mod.rs
neo/src/transform/: lpr.rs  mod.rs  transformer.rs
neo/src/triad/: builder.rs  classes.rs  kinds.rs  mod.rs  store.rs  triad.rs
neo/src/triad/impls/: impl_iter.rs  impl_ops.rs  impl_triad.rs  impl_variants.rs
neo/src/triad/kinds/: classes.rs  traits.rs
neo/src/types/: factors.rs  mod.rs
neo/tests/: transform.rs  triad.rs
rstm/: Cargo.toml
rstm/src/: error.rs  fsm.rs  lib.rs
rstm/src/fsm/: state.rs  tape.rs  transition.rs
rstm/src/programs/: instruction.rs  mod.rs  program.rs
rstm/src/state/: mod.rs  state.rs  transition.rs
rstm/src/turing/: machine.rs  mod.rs  utm.rs
rstm/src/types/: agent.rs  direction.rs  mod.rs  parts.rs  tape.rs
rstmt/: Cargo.toml
rstmt/examples/: basic.rs  misc.rs  triads.rs
rstmt/src/: lib.rs
rstmt/src/space/: state.rs
rstmt/src/space/state/: binary.rs
triad/: Cargo.toml
triad/src/: lib.rs  triad.rs
triad/src/triad/: factors.rs  state.rs
