[workspace]
default-members = [
    "rstmt"
]

exclude = [

]

members = [
    "core",
    "neo",
    "rstmt",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
paste = "1"
serde_json = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.26" }
thiserror = "1"

[workspace.package]
authors = ["Joe McCain III <jo3mccain@icloud.com>",]
categories = [ ]
description = "This crate focuses on building a music theory library that can be used to generate music theory data structures and algorithms."
edition = "2021"
homepage = "https://github.com/FL03/rstmt/wiki"
keywords = [ "music" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/rstmt.git"
version = "0.0.3"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
