[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rstmt-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
]

# [FF] Dependencies
alloc = [
    "num/alloc",
    "serde?/alloc",
]

rand = [
    "num/rand",
]

serde = [
    "dep:serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "num/std",
    "regex/std",
    "serde?/std",
    "strum/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
lazy_static.workspace = true
paste.workspace = true
smart-default.workspace = true
thiserror.workspace = true
[dependencies.num]
default-features = false
version = "0.4"

[dependencies.regex]
default-features = false
features = [
    "perf",
    "unicode",
]
version = "1"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
default-features = false
features = ["derive"]
version = "0.26"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
