[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rstmt-neo"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

full = [
    "default",
    "rand",
    "serde",
]

# [FF] Dependencies
rand = [
    "num/rand",
    "rstmt-core/rand",
]

serde = [
    "dep:serde",
    "petgraph/serde",
    "rstmt-core/serde",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
num = "0.4"
paste.workspace = true
petgraph = "0.6"
strum.workspace = true

[dependencies.serde]
features = ["derive"]
optional = true
version = "1"

[dependencies.rstmt-core]
path = "../core"
version = "0.0.1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
