[package]
name = "rstm"
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

# [FF] Dependencies
alloc = [
    "serde?/alloc",
]

serde = [
    "dep:serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "serde?/std",
    "strum/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
default-features = false
features = ["derive"]
version = "0.26"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
