[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rstmt"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "neo",
    "rand",
    "serde",
]

# ********* [FF] Features *********
neo = [
    "dep:rstmt-neo",
]

# ********* [FF] Dependencies *********
alloc = [
    "rstmt-core/alloc",
]

rand = [
    "rstmt-core/rand",
    "rstmt-neo?/rand",
]

serde = [
    "rstmt-core/serde",
    "rstmt-neo?/serde",
]

# ********* [FF] Environments *********
std = [
    "rstmt-core/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dev-dependencies]
anyhow.workspace = true
num = "0.4"

[dependencies.rstmt-core]
default-features = false
path = "../core"
version = "0.0.2"

[dependencies.rstmt-neo]
default-features = false
optional = true
path = "../neo"
version = "0.0.2"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
